# pm-second-brain

./: .gitignore  LICENSE  README.md  USAGE.md  USER-README.md  install.sh  pyproject.toml  setup-pm-second-brain.sh
docs/decisions/: 0001-sqlite-fts-impl.md  0002-opencode-hooks-parity.md  0003-runtime-min-versions.md  0004-prompt-language.md  0005-stop-the-world-evolution.md  0007-agentskills-io-format.md
hooks/: context-monitor.sh  post-task-evolve.sh  prompt-guard.sh  session-start.sh  workflow-guard.sh
launchd/: com.pm-second-brain.daily-brief.plist.tmpl
lib/: colors.sh  prompts.sh  symlinks.sh  validate.sh
mcp-configs/: claude-code.json
prompts/: install-driver.md
skills/pm-knowledge/: SKILL.md
skills/pm-knowledge/pm-add-decision/: SKILL.md  prompt.md
skills/pm-knowledge/pm-add-meeting/: SKILL.md  prompt.md
skills/pm-meta/: SKILL.md
skills/pm-quality/: SKILL.md
skills/pm-workflow/: SKILL.md
src/pm_second_brain/: __init__.py  audit.py  config.py  cron.py  history.py  keychain.py  patch.py  vault.py
systemd/: pm-second-brain-daily-brief.service.tmpl  pm-second-brain-daily-brief.timer.tmpl
templates/: daily-note.md  decision-note.md  meeting-note.md
templates/_brain/: MEMORY.md  SOUL.md  USER.md
templates/mocs/: Areas.md  Decisions.md  Index.md  People.md  Projects.md
tests/integration/: test_mcp_stdio.py
tests/skills/: test_skill_frontmatter.py
tests/unit/: test_audit.py  test_config.py  test_cron.py  test_history.py  test_keychain.py  test_patch.py  test_patch_smoke_guard.py  test_sqlite_fts.py  test_vault.py
(+25 files in other folders)
