[project]
name = "pm-second-brain"
version = "0.0.1"
description = "Personal Second Brain skill-pack for OpenCode and Claude Code"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "mcp>=0.9.0",
  "pyyaml>=6.0",
  "keyring>=24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
pm-sqlite-fts-mcp = "pm_second_brain.mcp_servers.sqlite_fts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pm_second_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
